VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc3Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [32MB/455.1MB][  7%][===>                                              ][10.67MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][24MB/s]  [160MB/455.1MB][ 35%][=================>                                ][32MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][33.33MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][34.29MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][35MB/s]  [320MB/455.1MB][ 70%][===================================>              ][35.56MB/s]  [368MB/455.1MB][ 80%][========================================>         ][36.8MB/s]  [408MB/455.1MB][ 89%][============================================>     ][37.09MB/s]  [455.1MB/455.1MB][100%][==================================================][41.37MB/s]  [455.1MB/455.1MB][100%][==================================================][37.93MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_1117/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_1117/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
